--- a/Zeev_test_notebook.ipynb
+++ b/Zeev_test_notebook.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQQcfue8AxcIlHjEcW6j9P",
+      "authorship_tag": "ABX9TyNU8w3/AzNQvv0qlI0lKE6Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "i2OSVgT1R_dt",
-        "outputId": "923fd4a3-7986-426e-d923-1718b1f5cfc6"
+        "outputId": "72cea328-9985-4360-c620-a34c7c88f6bd"
       },
       "outputs": [
         {
@@ -77,6 +77,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Functions for google drive**"
+      ],
+      "metadata": {
+        "id": "bsDXTN6UGO2r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def import_data_by_link(orig_url):\n",
+        "  path = 'https://drive.google.com/uc?export=download&id='+orig_url.split('/')[-2]\n",
+        "  df = pd.read_csv(path)\n",
+        "  return df"
+      ],
+      "metadata": {
+        "id": "l8IWuHWLFupS"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Loading Data**\n"
       ],
       "metadata": {
@@ -86,12 +109,9 @@
     {
       "cell_type": "code",
       "source": [
-        "orig_url=\"https://drive.google.com/file/d/11EYa_GNUkGq438XxofWorwnm2ZKLaIbB/view?usp=sharing\"\n",
-        "\n",
-        "path = 'https://drive.google.com/uc?export=download&id='+orig_url.split('/')[-2]\n",
-        "df = pd.read_csv(path)\n",
-        "\n",
-        "df.head()\n"
+        "article_link=\"https://drive.google.com/file/d/11EYa_GNUkGq438XxofWorwnm2ZKLaIbB/view?usp=sharing\"\n",
+        "df_Article=import_data_by_link(article_link)\n",
+        "df_Article.head()\n"
       ],
       "metadata": {
         "colab": {
@@ -99,9 +119,9 @@
           "height": 560
         },
         "id": "DddJa-uLTMLk",
-        "outputId": "4bbd4925-b8e3-464a-d324-ab955a9147c1"
+        "outputId": "4546ae56-a730-484b-82e3-52935fdcf465"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +173,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-61f11332-cc1e-434d-bef4-8aa79d1aa9d6\">\n",
+              "  <div id=\"df-d4b183e3-8e29-4d3b-b6c4-bd2d3f7ed2db\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -321,7 +341,7 @@
               "</table>\n",
               "<p>5 rows × 25 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-61f11332-cc1e-434d-bef4-8aa79d1aa9d6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d4b183e3-8e29-4d3b-b6c4-bd2d3f7ed2db')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -372,12 +392,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-61f11332-cc1e-434d-bef4-8aa79d1aa9d6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d4b183e3-8e29-4d3b-b6c4-bd2d3f7ed2db button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-61f11332-cc1e-434d-bef4-8aa79d1aa9d6');\n",
+              "          const element = document.querySelector('#df-d4b183e3-8e29-4d3b-b6c4-bd2d3f7ed2db');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -400,7 +420,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -412,7 +432,7 @@
       "metadata": {
         "id": "lPIzt_PnUHoO"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ]
